sample/msvc/error/c2313.cpp
// C2313.cpp
// compile with: /EHsc
// #include <eh.h>
class C {};
int main() {
    try {
        throw "ooops!";
    }
    catch( C& ) {}
    catch( C ) {}   // C2313
}
